--- a/2025-04-29-Gen-AI/genai-biomedical-code.ipynb
+++ b/2025-04-29-Gen-AI/genai-biomedical-code.ipynb
@@ -25,15 +25,7 @@
    "execution_count": 2,
    "id": "7af4d07c-e4d9-4b8d-a35e-31886b5180d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cannot find .env file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -77,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf51117d-a961-455b-9c33-ba63ef3d8afc",
    "metadata": {},
    "outputs": [
@@ -87,7 +79,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "229e36ea-3321-4b69-a446-8cb46584d2e8",
    "metadata": {},
    "outputs": [
@@ -109,17 +101,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n"
+      "Loaded key: sk-pr...\n"
      ]
     }
    ],
    "source": [
-    "print(os.getenv(\"OPENAI_API_KEY\"))  # should not be None"
+    "key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "print(\"Loaded key:\", key[:5] + \"...\" if key else \"None\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bc1af38c-38c2-44a5-917d-678ab9c601d0",
    "metadata": {},
    "outputs": [],
